--- a/packages/auth/public/index.html
+++ b/packages/auth/public/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Auth</title>
-</head>
-<body>
+<html>
+  <head></head>
+  <body>
     <div id="_auth-dev-root"></div>
-</body>
+  </body>
 </html>
