--- a/packages/dashboard/public/index.html
+++ b/packages/dashboard/public/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dashboard</title>
-</head>
-<body>
+<html>
+  <head></head>
+  <body>
     <div id="_dashboard-dev-root"></div>
-</body>
+  </body>
 </html>
